# ProyectoGUI

./: INSTRUCCIONES.md  TUTORIAL  meson.build  org.my.ProyectoGUI.json
data/: meson.build  org.my.ProyectoGUI.appdata.xml.in  org.my.ProyectoGUI.desktop.in  org.my.ProyectoGUI.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  proyectogui-application.c  proyectogui-application.h  proyectogui-window.c  proyectogui-window.h  proyectogui-window.ui  proyectogui.gresource.xml
